<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/_8sdp"
    android:paddingEnd="@dimen/_8sdp"
    android:background="@color/colorSecondary">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_view_margin"
        android:layout_marginEnd="@dimen/default_view_margin"
        android:text="@string/filter_by_year"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/text_size_heading"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/year_input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:textColorHint="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_query"
            android:layout_width="@dimen/_116sdp"
            android:layout_height="@dimen/_50sdp"
            android:gravity="center_horizontal"
            android:hint="@string/year"
            android:inputType="number"
            android:maxLength="4"
            android:maxLines="1"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_heading" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/launch_success_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/launch_status"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/text_size_heading"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/year_input_layout" />

    <RadioGroup
        android:id="@+id/filter_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_minus4sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/launch_success_title"
        app:layout_constraintTop_toBottomOf="@+id/launch_success_title">

        <RadioButton
            android:id="@+id/filter_all"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/filter_btn_size"
            android:checked="false"
            android:text="@string/all"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_medium" />

        <RadioButton
            android:id="@+id/filter_success"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/filter_btn_size"
            android:checked="false"
            android:text="@string/success"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_medium" />

        <RadioButton
            android:id="@+id/filter_failure"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/filter_btn_size"
            android:checked="false"
            android:text="@string/failure"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_medium" />

        <RadioButton
            android:id="@+id/filter_unknown"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/filter_btn_size"
            android:checked="false"
            android:text="@string/unknown"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_medium" />

    </RadioGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/negative_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_70sdp"
        android:text="@string/text_cancel"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/text_size_subHeading"
        app:layout_constraintBottom_toBottomOf="@+id/positive_button"
        app:layout_constraintEnd_toStartOf="@+id/positive_button"
        app:layout_constraintTop_toTopOf="@+id/positive_button" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/positive_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/text_apply"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_subHeading"
        app:layout_constraintEnd_toEndOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/order_switch" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/asc_desc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/asc_desc"
        android:textColor="@color/textColorPrimary"
        android:textSize="@dimen/text_size_heading"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/filter_group" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/order_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="@+id/asc_desc_title"
        app:layout_constraintStart_toEndOf="@+id/asc_desc_title"
        app:layout_constraintTop_toTopOf="@+id/asc_desc_title" />

</androidx.constraintlayout.widget.ConstraintLayout>